"pear-distributable-bootstrap": "^0.0.0"

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "homepage": "https://github.com/holepunchto/libappling#readme",
   "dependencies": {
+    "pear-distributable-bootstrap": "^0.0.0",
     "pear-updater-bootstrap": "^2.0.0"
   },
   "devDependencies": {
