--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://github.com/holepunchto/libappling#readme",
   "dependencies": {
-    "pear-distributable-bootstrap": "^1.0.1"
+    "pear-updater-bootstrap": "^2.3.0"
   },
   "devDependencies": {
     "cmake-bare": "^1.4.0",
