Install fixture components

--- a/test/fixtures/CMakeLists.txt
+++ b/test/fixtures/CMakeLists.txt
@@ -1,4 +1,24 @@
-add_executable(runtime runtime.c)
+bare_target(target)
+
+install(
+  TARGETS appling_launch_shared
+  DESTINATION ${CMAKE_CURRENT_LIST_DIR}/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0/by-arch/${target}/lib
+  COMPONENT fixtures
+)
+
+add_executable(appling_platform_runtime runtime.c)
+
+set_target_properties(
+  appling_platform_runtime
+  PROPERTIES
+  OUTPUT_NAME pear-runtime
+)
+
+install(
+  TARGETS appling_platform_runtime
+  DESTINATION ${CMAKE_CURRENT_LIST_DIR}/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0/by-arch/${target}/bin
+  COMPONENT fixtures
+)
 
 file(
   CREATE_LINK
