--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,4 +44,5 @@ jobs:
       - run: npm install
       - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} --debug
       - run: bare-make build
+      - run: bare-make install --component fixtures
       - run: bare-make test
